@@ -7,7 +7,6 @@ import java.util.Date;
 import java.util.Iterator;
 import java.util.LinkedHashSet;
 
-import junit.framework.TestCase;
 
 import org.eclipse.birt.data.aggregation.api.IBuildInAggregation;
 import org.eclipse.birt.data.aggregation.impl.BuildInAggregationFactory;
@@ -15,17 +14,23 @@ import org.eclipse.birt.data.engine.api.aggregation.Accumulator;
 import org.eclipse.birt.data.engine.api.aggregation.IAggrFunction;
 import org.eclipse.birt.data.engine.core.DataException;
 
+import org.junit.After;
+import org.junit.Before;
+import org.junit.Test;
+import org.junit.Ignore;
+import static org.junit.Assert.*;
+
 /**
  *
  * test total aggregation function
  */
-public class TotalTest extends TestCase
-{
+public class TotalTest {
     private double[] weight = {1.2, 1.4, 2, 0.5, 1.4, 2.4, 1.5, 2.5, 3.7, 1.4, 1.03, 0.5, 0.2, 0.6, 1.3, 1.5, 12.4};
     private double[] doubleArray1 = {1, 3, 5, 4, 6, 8, 3, 4, 5, 7, 9, 10, 4, 6, 7};
     private boolean[] doubleArray1TopBottom = {false, false, false,false,false,true,false,false,false,true,true,true,false,false,true};
     private double[] doubleArray2 = {4, -43, 4, 23, -15, -6, 4, -6, 3, 63, 33, -6, -23, 34};
     private Double[] doubleArray3 = {Double.valueOf( "100" ),Double.valueOf( "20" ),null,Double.valueOf( "300" ),null,Double.valueOf( "40" ),Double.valueOf( "10" ), Double.valueOf( "10" )};
+    private Double[] doubleArrayNull = {null,null};
     private boolean[] doubleArray3TopBottom = {true,false,false,true,false,false,false, false};
     private int[] doubleArray3RankDec = {2, 4, 7, 1, 7, 3, 5, 5 };
     private int[] doubleArray3RankAsc = {7, 5, 1, 8, 1, 6, 3, 3 };
@@ -38,7 +43,7 @@ public class TotalTest extends TestCase
     private double[] doubleArray6 = {1, 2, 2, 3, 1, 3, 4, 2, 1};
     private Object[] anyObjectArray = { "aa", "bb", null, new Integer( 0 ), null, new Double( 1 ), new Float( 0 ), null };
     private Object[] anyObjectArray2 = { "aa", "bb", null, new Integer( 0 ), null, new Double( 1 ), new Float( 0 ), null, false, new Date(1000000L) };
-    
+
     private Date[] dates = new Date[]
                             {
             new Date(1000000L),
@@ -46,7 +51,7 @@ public class TotalTest extends TestCase
             new Date(3000000L),
             new Date(4000000L)
                             };
-    
+
     private Date[] dates2 = new Date[]
                             {
             new Date(1000000L),
@@ -55,7 +60,7 @@ public class TotalTest extends TestCase
             new Date(3000000L),
             new Date(4000000L)
                             };
-    
+
     private String[] str2 = new String[]
                                        {
             "test",
@@ -64,7 +69,7 @@ public class TotalTest extends TestCase
             "for",
             "aggregation"
                                        };
-    
+
     private String[] str4 = new String[]
                                        {
             "test",
@@ -80,311 +85,302 @@ public class TotalTest extends TestCase
                                        };
 
     private BigDecimal[] bigDecimalArray = new BigDecimal[]{
-			new BigDecimal( "1" ),
-			new BigDecimal( "3" ),
-			new BigDecimal( "5" ),
-			new BigDecimal( "4" ),
-			new BigDecimal( "6" ),
-			new BigDecimal( "8" ),
-			new BigDecimal( "3" ),
-			new BigDecimal( "4" ),
-			new BigDecimal( "5" ),
-			new BigDecimal( "7" ),
-			new BigDecimal( "9" ),
-			new BigDecimal( "10" ),
-			new BigDecimal( "4" ),
-			new BigDecimal( "6" ),
-			new BigDecimal( "7" )
-	};
-    
-    private int[] bigDecimalRankAsc = {
-			1, 2, 7, 4, 9, 13, 2, 4, 7, 11, 14, 15, 4, 9, 11
-	};
-    
-    private int[] bigDecimalPercentRank = new int[]{
-			0,
-			71,
-			428,
-			214,
-			571,
-			857,
-			71,
-			214,
-			428,
-			714,
-			928,
-			1000,
-			214,
-			571,
-			714
+            new BigDecimal( "1" ),
+            new BigDecimal( "3" ),
+            new BigDecimal( "5" ),
+            new BigDecimal( "4" ),
+            new BigDecimal( "6" ),
+            new BigDecimal( "8" ),
+            new BigDecimal( "3" ),
+            new BigDecimal( "4" ),
+            new BigDecimal( "5" ),
+            new BigDecimal( "7" ),
+            new BigDecimal( "9" ),
+            new BigDecimal( "10" ),
+            new BigDecimal( "4" ),
+            new BigDecimal( "6" ),
+            new BigDecimal( "7" )
+    };
 
-	};
-    
+    private int[] bigDecimalRankAsc = {
+            1, 2, 7, 4, 9, 13, 2, 4, 7, 11, 14, 15, 4, 9, 11
+    };
+
+    private int[] bigDecimalPercentRank = new int[]{
+            0,
+            71,
+            428,
+            214,
+            571,
+            857,
+            71,
+            214,
+            428,
+            714,
+            928,
+            1000,
+            214,
+            571,
+            714
+
+    };
+
     private int[] bigDecimalPercentSum = new int[]{
-			12, 36, 60, 48, 73, 97, 36, 48, 60, 85, 109, 121, 48, 73, 85
-	};
-    
-	private BuildInAggregationFactory buildInAggrFactory = new BuildInAggregationFactory();
-    
+            12, 36, 60, 48, 73, 97, 36, 48, 60, 85, 109, 121, 48, 73, 85
+    };
+
+    private BuildInAggregationFactory buildInAggrFactory = new BuildInAggregationFactory();
+
     /*
      * @see TestCase#setUp()
      */
-    protected void setUp() throws Exception
-    {
-        super.setUp();
-    }
-
-    /*
+/*
      * @see TestCase#tearDown()
      */
-    protected void tearDown() throws Exception
-    {
-        super.tearDown();
-    }
-    
+@Test
     public void testTotalConcatenate( ) throws Exception
-	{
-		IAggrFunction ag = buildInAggrFactory.getAggregation( "concatenate" );
-		Accumulator ac = ag.newAccumulator( );
-		assertEquals( IBuildInAggregation.TOTAL_CONCATENATE_FUNC, ag.getName( ) );
-		assertEquals( IAggrFunction.SUMMARY_AGGR, ag.getType( ) );
-		assertEquals( 4, ag.getParameterDefn( ).length );
-		String separator = "-";
+    {
+        IAggrFunction ag = buildInAggrFactory.getAggregation( "concatenate" );
+        Accumulator ac = ag.newAccumulator( );
+        assertEquals( IBuildInAggregation.TOTAL_CONCATENATE_FUNC, ag.getName( ) );
+        assertEquals( IAggrFunction.SUMMARY_AGGR, ag.getType( ) );
+        assertEquals( 4, ag.getParameterDefn( ).length );
+        String separator = "-";
 
-		String result = "";
+        String result = "";
 
-		ac.start( );
-		for ( int i = 0; i < str2.length; i++ )
-		{
-			ac.onRow( new Object[]{
-					str2[i], separator, null, null
-			} );
-			result += str2[i];
-			result += separator;
-		}
-		if ( result.length( ) > 0 )
-		{
-			result = result.substring( 0, result.length( ) - separator.length( ) );
-		}
-		ac.finish( );
-		assertEquals( result, ac.getValue( ) );
-		
-		ac.start( );
-		for ( int i = 0; i < str4.length; i++ )
-		{
-			ac.onRow( new Object[]{
-					str4[i], separator, null, null
-			} );
-		}
-		ac.finish( );
-		assertEquals( result, ac.getValue( ) );
-		
-		ac.start( );
-		result = "";
-		boolean exceedsMaxLength = false;
-		for ( int i = 0; i < str4.length; i++ )
-		{
-			ac.onRow( new Object[]{
-					str4[i], separator, 50, true
-			} );
-			if ( exceedsMaxLength || result.getBytes( ).length > 50 - str4[i].length( ) )
-			{
-				exceedsMaxLength = true;
-				continue;
-			}
-			result += str4[i];
-			result += separator;
-		}
-		if ( result.length( ) > 0 )
-		{
-			result = result.substring( 0, result.length( ) - separator.length( ) );
-		}
-		ac.finish( );
-		assertEquals( result, ac.getValue( ) );
-		
-		ac.start( );
-		result = "";
-		exceedsMaxLength = false;
-		for ( int i = 0; i < str2.length; i++ )
-		{
-			ac.onRow( new Object[]{
-					str2[i], separator, 20, null
-			} );
-			if ( exceedsMaxLength || result.getBytes( ).length > 20 - str2[i].length( ) )
-			{
-				exceedsMaxLength = true;
-				continue;
-			}
-			result += str2[i];
-			result += separator;
-		}
-		if ( result.length( ) > 0 )
-		{
-			result = result.substring( 0, result.length( ) - separator.length( ) );
-		}
-		ac.finish( );
-		assertEquals( result, ac.getValue( ) );
-		
-		ac.start( );
-		result = "";
-		separator = ";  ";
-		exceedsMaxLength = false;
-		for ( int i = 0; i < str2.length; i++ )
-		{
-			ac.onRow( new Object[]{
-					str2[i], separator, 20, null
-			} );
-			if ( exceedsMaxLength || result.getBytes( ).length > 20 - str2[i].length( ) )
-			{
-				exceedsMaxLength = true;
-				continue;
-			}
-			result += str2[i];
-			result += separator;
-		}
-		if ( result.length( ) > 0 )
-		{
-			result = result.substring( 0, result.length( ) - separator.length( ) );
-		}
-		ac.finish( );
-		assertEquals( result, ac.getValue( ) );
-		
-		ac.start( );
-		result = "";
-		separator = "\n";
-		exceedsMaxLength = false;
-		for ( int i = 0; i < str2.length; i++ )
-		{
-			ac.onRow( new Object[]{
-					str2[i], separator, 20, null
-			} );
-			if ( exceedsMaxLength || result.getBytes( ).length > 20 - str2[i].length( ) )
-			{
-				exceedsMaxLength = true;
-				continue;
-			}
-			result += str2[i];
-			result += separator;
-		}
-		if ( result.length( ) > 0 )
-		{
-			result = result.substring( 0, result.length( ) - separator.length( ) );
-		}
-		ac.finish( );
-		assertEquals( result, ac.getValue( ) );
-		
-		ac.start( );
-		result = "";
-		separator = "\t";
-		exceedsMaxLength = false;
-		for ( int i = 0; i < str2.length; i++ )
-		{
-			ac.onRow( new Object[]{
-					str2[i], separator, 20, null
-			} );
-			if ( exceedsMaxLength || result.getBytes( ).length > 20 - str2[i].length( ) )
-			{
-				exceedsMaxLength = true;
-				continue;
-			}
-			result += str2[i];
-			result += separator;
-		}
-		if ( result.length( ) > 0 )
-		{
-			result = result.substring( 0, result.length( ) - separator.length( ) );
-		}
-		ac.finish( );
-		assertEquals( result, ac.getValue( ) );
-		
-		ac.start( );
-		result = "";
-		separator = "   ";
-		exceedsMaxLength = false;
-		for ( int i = 0; i < str2.length; i++ )
-		{
-			ac.onRow( new Object[]{
-					str2[i], separator, 20, null
-			} );
-			if ( exceedsMaxLength || result.getBytes( ).length > 20 - str2[i].length( ) )
-			{
-				exceedsMaxLength = true;
-				continue;
-			}
-			result += str2[i];
-			result += separator;
-		}
-		if ( result.length( ) > 0 )
-		{
-			result = result.substring( 0, result.length( ) - separator.length( ) );
-		}
-		ac.finish( );
-		assertEquals( result, ac.getValue( ) );
-		
-		ac.start( );
-		result = "";
-		separator = ",,, ";
-		exceedsMaxLength = false;
-		for ( int i = 0; i < str2.length; i++ )
-		{
-			ac.onRow( new Object[]{
-					str2[i], separator, 20, null
-			} );
-			if ( exceedsMaxLength || result.getBytes( ).length > 20 - str2[i].length( ) )
-			{
-				exceedsMaxLength = true;
-				continue;
-			}
-			result += str2[i];
-			result += separator;
-		}
-		if ( result.length( ) > 0 )
-		{
-			result = result.substring( 0, result.length( ) - separator.length( ) );
-		}
-		ac.finish( );
-		assertEquals( result, ac.getValue( ) );
-		
-		ac.start( );
-		result = "";
-		separator = "#";
-		exceedsMaxLength = false;
-		LinkedHashSet<String> objects = new LinkedHashSet<String>( );
-		for ( int i = 0; i < anyObjectArray2.length; i++ )
-		{
-			if ( anyObjectArray2[i] != null )
-			{
-				objects.add( anyObjectArray2[i].toString( ) );
-			}
-		}
-		Iterator<String> iterator = objects.iterator( );
-		while ( iterator.hasNext( ) )
-		{
-			String value = iterator.next( );
-			ac.onRow( new Object[]{
-					value, separator, 30, false
-			} );
-			if ( value != null )
-			{
-				if ( exceedsMaxLength
-						|| result.getBytes( ).length > 30 - value.length( ) )
-				{
-					exceedsMaxLength = true;
-					continue;
-				}
-				result += value;
-				result += separator;
-			}
-		}
-		if ( result.length( ) > 0 )
-		{
-			result = result.substring( 0, result.length( ) - separator.length( ) );
-		}
-		ac.finish( );
-		assertEquals( result, ac.getValue( ) );
-        
-	}
+        ac.start( );
+        for ( int i = 0; i < str2.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                    str2[i], separator, null, null
+            } );
+            result += str2[i];
+            result += separator;
+        }
+        if ( result.length( ) > 0 )
+        {
+            result = result.substring( 0, result.length( ) - separator.length( ) );
+        }
+        ac.finish( );
+        assertEquals( result, ac.getValue( ) );
 
+        ac.start( );
+        for ( int i = 0; i < str4.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                    str4[i], separator, null, null
+            } );
+        }
+        ac.finish( );
+        assertEquals( result, ac.getValue( ) );
+
+        ac.start( );
+        result = "";
+        boolean exceedsMaxLength = false;
+        for ( int i = 0; i < str4.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                    str4[i], separator, 50, true
+            } );
+            if ( exceedsMaxLength || result.getBytes( ).length > 50 - str4[i].length( ) )
+            {
+                exceedsMaxLength = true;
+                continue;
+            }
+            result += str4[i];
+            result += separator;
+        }
+        if ( result.length( ) > 0 )
+        {
+            result = result.substring( 0, result.length( ) - separator.length( ) );
+        }
+        ac.finish( );
+        assertEquals( result, ac.getValue( ) );
+
+        ac.start( );
+        result = "";
+        exceedsMaxLength = false;
+        for ( int i = 0; i < str2.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                    str2[i], separator, 20, null
+            } );
+            if ( exceedsMaxLength || result.getBytes( ).length > 20 - str2[i].length( ) )
+            {
+                exceedsMaxLength = true;
+                continue;
+            }
+            result += str2[i];
+            result += separator;
+        }
+        if ( result.length( ) > 0 )
+        {
+            result = result.substring( 0, result.length( ) - separator.length( ) );
+        }
+        ac.finish( );
+        assertEquals( result, ac.getValue( ) );
+
+        ac.start( );
+        result = "";
+        separator = ";  ";
+        exceedsMaxLength = false;
+        for ( int i = 0; i < str2.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                    str2[i], separator, 20, null
+            } );
+            if ( exceedsMaxLength || result.getBytes( ).length > 20 - str2[i].length( ) )
+            {
+                exceedsMaxLength = true;
+                continue;
+            }
+            result += str2[i];
+            result += separator;
+        }
+        if ( result.length( ) > 0 )
+        {
+            result = result.substring( 0, result.length( ) - separator.length( ) );
+        }
+        ac.finish( );
+        assertEquals( result, ac.getValue( ) );
+
+        ac.start( );
+        result = "";
+        separator = "\n";
+        exceedsMaxLength = false;
+        for ( int i = 0; i < str2.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                    str2[i], separator, 20, null
+            } );
+            if ( exceedsMaxLength || result.getBytes( ).length > 20 - str2[i].length( ) )
+            {
+                exceedsMaxLength = true;
+                continue;
+            }
+            result += str2[i];
+            result += separator;
+        }
+        if ( result.length( ) > 0 )
+        {
+            result = result.substring( 0, result.length( ) - separator.length( ) );
+        }
+        ac.finish( );
+        assertEquals( result, ac.getValue( ) );
+
+        ac.start( );
+        result = "";
+        separator = "\t";
+        exceedsMaxLength = false;
+        for ( int i = 0; i < str2.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                    str2[i], separator, 20, null
+            } );
+            if ( exceedsMaxLength || result.getBytes( ).length > 20 - str2[i].length( ) )
+            {
+                exceedsMaxLength = true;
+                continue;
+            }
+            result += str2[i];
+            result += separator;
+        }
+        if ( result.length( ) > 0 )
+        {
+            result = result.substring( 0, result.length( ) - separator.length( ) );
+        }
+        ac.finish( );
+        assertEquals( result, ac.getValue( ) );
+
+        ac.start( );
+        result = "";
+        separator = "   ";
+        exceedsMaxLength = false;
+        for ( int i = 0; i < str2.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                    str2[i], separator, 20, null
+            } );
+            if ( exceedsMaxLength || result.getBytes( ).length > 20 - str2[i].length( ) )
+            {
+                exceedsMaxLength = true;
+                continue;
+            }
+            result += str2[i];
+            result += separator;
+        }
+        if ( result.length( ) > 0 )
+        {
+            result = result.substring( 0, result.length( ) - separator.length( ) );
+        }
+        ac.finish( );
+        assertEquals( result, ac.getValue( ) );
+
+        ac.start( );
+        result = "";
+        separator = ",,, ";
+        exceedsMaxLength = false;
+        for ( int i = 0; i < str2.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                    str2[i], separator, 20, null
+            } );
+            if ( exceedsMaxLength || result.getBytes( ).length > 20 - str2[i].length( ) )
+            {
+                exceedsMaxLength = true;
+                continue;
+            }
+            result += str2[i];
+            result += separator;
+        }
+        if ( result.length( ) > 0 )
+        {
+            result = result.substring( 0, result.length( ) - separator.length( ) );
+        }
+        ac.finish( );
+        assertEquals( result, ac.getValue( ) );
+
+        ac.start( );
+        result = "";
+        separator = "#";
+        exceedsMaxLength = false;
+        LinkedHashSet<String> objects = new LinkedHashSet<String>( );
+        for ( int i = 0; i < anyObjectArray2.length; i++ )
+        {
+            if ( anyObjectArray2[i] != null )
+            {
+                objects.add( anyObjectArray2[i].toString( ) );
+            }
+        }
+        Iterator<String> iterator = objects.iterator( );
+        while ( iterator.hasNext( ) )
+        {
+            String value = iterator.next( );
+            ac.onRow( new Object[]{
+                    value, separator, 30, false
+            } );
+            if ( value != null )
+            {
+                if ( exceedsMaxLength
+                        || result.getBytes( ).length > 30 - value.length( ) )
+                {
+                    exceedsMaxLength = true;
+                    continue;
+                }
+                result += value;
+                result += separator;
+            }
+        }
+        if ( result.length( ) > 0 )
+        {
+            result = result.substring( 0, result.length( ) - separator.length( ) );
+        }
+        ac.finish( );
+        assertEquals( result, ac.getValue( ) );
+
+    }
+	@Test
     public void testTotalCount() throws Exception
     {
         IAggrFunction ag = buildInAggrFactory.getAggregation("count");
@@ -392,25 +388,25 @@ public class TotalTest extends TestCase
         assertEquals(IBuildInAggregation.TOTAL_COUNT_FUNC, ag.getName());
         assertEquals(IAggrFunction.SUMMARY_AGGR, ag.getType());
         assertEquals(1, ag.getParameterDefn().length);
-        
-        ac.start( );
-		for ( int i = 0; i < anyObjectArray.length; i++ )
-		{
-			ac.onRow( new Object[]{
-				anyObjectArray[i]
-			} );
-		}
-		ac.finish( );
-		assertEquals( new Integer( 5 ), ac.getValue( ) );
 
-		ac.start( );
-		for ( int i = 0; i < anyObjectArray.length; i++ )
-		{
-			ac.onRow( null );
-		}
-		ac.finish( );
-		assertEquals( new Integer( 8 ), ac.getValue( ) );
-        
+        ac.start( );
+        for ( int i = 0; i < anyObjectArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                anyObjectArray[i]
+            } );
+        }
+        ac.finish( );
+        assertEquals( new Integer( 5 ), ac.getValue( ) );
+
+        ac.start( );
+        for ( int i = 0; i < anyObjectArray.length; i++ )
+        {
+            ac.onRow( null );
+        }
+        ac.finish( );
+        assertEquals( new Integer( 8 ), ac.getValue( ) );
+
         ac.start();
         for(int i=0; i<doubleArray1.length; i++)
         {
@@ -418,7 +414,7 @@ public class TotalTest extends TestCase
         }
         ac.finish();
         assertEquals(new Integer(15), ac.getValue());
-        
+
         ac.start();
         for(int i=0; i<doubleArray2.length; i++)
         {
@@ -426,20 +422,20 @@ public class TotalTest extends TestCase
         }
         ac.finish();
         assertEquals(new Integer(14), ac.getValue());
-        
+
         ac.start();
-        
+
         for(int i=0; i<str1.length; i++)
         {
             ac.onRow(new Object[]{});
         }
         ac.finish();
         assertEquals(new Integer(14), ac.getValue());
-        
+
         ac.start();
         ac.finish();
         assertEquals(new Integer(0), ac.getValue());
-        
+
         ac.start();
         try
         {
@@ -451,7 +447,7 @@ public class TotalTest extends TestCase
             assertTrue(true);
         }
     }
-    
+	@Test
     public void testTotalSum() throws Exception
     {
         IAggrFunction ag = buildInAggrFactory.getAggregation("sum");
@@ -460,7 +456,19 @@ public class TotalTest extends TestCase
         assertEquals(IAggrFunction.SUMMARY_AGGR, ag.getType());
         assertEquals(1, ag.getParameterDefn().length);
         assertTrue(!ag.getParameterDefn()[0].isOptional());
-        
+
+        // null-value handling
+        {
+	        BigDecimal[] arr = new BigDecimal[] { null, null, new BigDecimal("1.0"), null, new BigDecimal("2.5") };
+	        ac.start();
+	        for(int i=0; i<arr.length; i++)
+	        {
+	            ac.onRow( new Object[] { arr[i] } );
+	        }
+	        ac.finish();
+	        assertEquals(3.5D, ac.getValue());
+        }
+
         ac.start();
         for(int i=0; i<doubleArray1.length; i++)
         {
@@ -468,7 +476,7 @@ public class TotalTest extends TestCase
         }
         ac.finish();
         assertEquals(new Double(82.0), ac.getValue());
-        
+
         ac.start();
         for(int i=0; i<doubleArray2.length; i++)
         {
@@ -476,19 +484,19 @@ public class TotalTest extends TestCase
         }
         ac.finish();
         assertEquals(new Double(69.0), ac.getValue());
-        
+
         ac.start();
         for(int i=0; i<str1.length; i++)
         {
             ac.onRow(new Object[]{str1[i]});
         }
         ac.finish();
-        assertEquals(new Double(69.0), ac.getValue());
-        
+        assertEquals(69D, ac.getValue());
+
         ac.start();
         ac.finish();
-        assertEquals(new Double(0.0), ac.getValue());
-        
+        assertEquals(null, ac.getValue());
+
         ac.start();
         try
         {
@@ -499,38 +507,120 @@ public class TotalTest extends TestCase
         {
             assertTrue(true);
         }
-        
+
         // test Total.sum() on String objects with data which can't be convert
-		// to Number
-		ac.start( );
-		try
-		{
-			for ( int i = 0; i < str2.length; i++ )
-			{
-				ac.onRow( new Object[]{
-					str2[i]
-				} );
-			}
-			fail( );
-		}
-		catch ( DataException e )
-		{
-			assertTrue( true );
-		}
-		ac.finish( );
-		
+        // to Number
+        ac.start( );
+        try
+        {
+            for ( int i = 0; i < str2.length; i++ )
+            {
+                ac.onRow( new Object[]{
+                    str2[i]
+                } );
+            }
+            fail( );
+        }
+        catch ( DataException e )
+        {
+            assertTrue( true );
+        }
+        ac.finish( );
+
         // test Total.sum() for BigDecimal data
         ac.start( );
-		for ( int i = 0; i < bigDecimalArray.length; i++ )
-		{
-			ac.onRow( new Object[]{
-				bigDecimalArray[i]
-			} );
-		}
-		ac.finish( );
-		assertEquals( new BigDecimal( "82.0" ), ac.getValue( ) );
-    }
+        for ( int i = 0; i < bigDecimalArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                bigDecimalArray[i]
+            } );
+        }
+        ac.finish( );
+        assertEquals( 82D, ac.getValue( ) );
 
+        ac.start( );
+        ac.onRow( new Object[]{
+                new BigDecimal("1.2")
+            } );
+        ac.finish( );
+        assertEquals( 1.2D, ac.getValue( ) );
+
+        // test Total.sum() for heterogeneous Number array data
+        {
+            Number numberArray[] = new Number[] {
+                BigDecimal.ZERO,
+                BigDecimal.ONE,
+                BigDecimal.TEN,
+                Double.valueOf("0.1"),
+                new BigDecimal("0.1"),
+                new BigDecimal(0.1D),
+                new BigDecimal("0.1"),
+                new Double(0.1D),
+            };
+            ac.start( );
+            for ( int i = 0; i < numberArray.length; i++ )
+            {
+                ac.onRow( new Object[]{
+                    numberArray[i]
+                } );
+            }
+            ac.finish( );
+            Number x = ( Number )ac.getValue( );
+            assertTrue( new BigDecimal( "11.49" ).compareTo( new BigDecimal( x.toString( ) ) ) == -1 );
+            assertTrue( new BigDecimal( "11.51" ).compareTo( new BigDecimal( x.toString( ) ) ) == 1 );
+        }
+
+        // test Total.sum() for data with NaN
+        {
+            ac.start( );
+            ac.onRow( new Object[]{ 0D/0D } );
+            ac.onRow( new Object[]{ Double.valueOf( "0.1" ), Double.valueOf( "0.2" ) } );
+            ac.onRow( new Object[]{ new BigDecimal( "0.3" ) } );
+            ac.finish( );
+            Number x = ( Number )ac.getValue( );
+            assertTrue( x instanceof Double && ( ( Double )x ).isNaN( ) );
+
+            ac.start( );
+            ac.onRow( new Object[]{ Double.valueOf( "0.1" ) } );
+            ac.onRow( new Object[]{ new BigDecimal( "0.2" ), new BigDecimal( "0.3" ) } );
+            ac.onRow( new Object[]{ Double.NaN } );
+            ac.onRow( new Object[]{ new BigDecimal( "0.4" ) } );
+            ac.finish( );
+            x = ( Number )ac.getValue( );
+            assertTrue( x instanceof Double && ( ( Double )x ).isNaN( ) );
+        }
+
+        // test Total.sum() for data with Infinity
+        {
+            ac.start( );
+            ac.onRow( new Object[]{ Double.POSITIVE_INFINITY } );
+            ac.onRow( new Object[]{ Double.valueOf( "0.1" ), Double.valueOf( "0.2" ) } );
+            ac.onRow( new Object[]{ new BigDecimal( "0.3" ) } );
+            ac.finish( );
+            Number x = ( Number )ac.getValue( );
+            assertTrue( x instanceof Double);
+            assertTrue( ( ( Double )x ).isNaN( ) );
+
+            ac.start( );
+            ac.onRow( new Object[]{ Double.valueOf( "0.1" ), Double.valueOf( "0.2" ) } );
+            ac.onRow( new Object[]{ new BigDecimal( "0.3" ) } );
+            ac.onRow( new Object[]{ -1D/0D } );
+            ac.finish( );
+            x = ( Number )ac.getValue( );
+            assertTrue( x instanceof Double);
+            assertTrue( ( ( Double )x ).isNaN( ) );
+
+            ac.start( );
+            ac.onRow( new Object[]{ Double.valueOf( "0.1" ) } );
+            ac.onRow( new Object[]{ Double.NEGATIVE_INFINITY } );
+            ac.onRow( new Object[]{ new BigDecimal( "0.3" ) } );
+            ac.finish( );
+            x = ( Number )ac.getValue( );
+            assertTrue( x instanceof Double);
+            assertTrue( ( ( Double )x ).isNaN( ) );
+        }
+    }
+	@Test
     public void testTotalRunningSum() throws Exception
     {
         IAggrFunction ag = buildInAggrFactory.getAggregation("RUNNINGSUM");
@@ -539,58 +629,68 @@ public class TotalTest extends TestCase
         assertEquals(IAggrFunction.RUNNING_AGGR, ag.getType());
         assertEquals(1, ag.getParameterDefn().length);
         assertTrue(!ag.getParameterDefn()[0].isOptional());
-        double sum = 0D;
-        ac.start( );
-		for ( int i = 0; i < doubleArray1.length; i++ )
-		{
-			ac.onRow( new Double[]{
-				new Double( doubleArray1[i] )
-			} );
-			sum += doubleArray1[i];
-			assertEquals( new Double( sum ), ac.getValue( ) );
-		}
-        ac.finish();
-        sum = 0D;
-        ac.start();
-        for(int i=0; i<doubleArray2.length; i++)
+        
         {
-            ac.onRow(new Double[]{new Double(doubleArray2[i])});
-            sum += doubleArray2[i];
-			assertEquals( new Double( sum ), ac.getValue( ) );
+	        double sum = 0D;
+	        ac.start( );
+	        for ( int i = 0; i < doubleArray1.length; i++ )
+	        {
+	            ac.onRow( new Double[]{
+	                new Double( doubleArray1[i] )
+	            } );
+	            sum += doubleArray1[i];
+	            assertEquals( new Double( sum ), ac.getValue( ) );
+	        }
+	        ac.finish();
         }
-        ac.finish();
-        sum = 0D;
         
-        ac.start();
-        for(int i=0; i<str1.length; i++)
         {
-            ac.onRow(new Object[]{str1[i]});
-            sum += new Double(str1[i]).doubleValue();
-			assertEquals( new Double( sum ), ac.getValue( ) );
+	        double sum = 0D;
+	        ac.start();
+	        for(int i=0; i<doubleArray2.length; i++)
+	        {
+	            ac.onRow(new Double[]{new Double(doubleArray2[i])});
+	            sum += doubleArray2[i];
+	            assertEquals( new Double( sum ), ac.getValue( ) );
+	        }
+	        ac.finish();
         }
-        ac.finish();
-        sum = 0D;
-        
-        ac.start();
-        ac.finish();
-        assertEquals(null, ac.getValue());
-        
+
+        {
+	        Double sum = 0.0D;
+	        ac.start();
+	        for(int i=0; i<str1.length; i++)
+	        {
+	            ac.onRow(new Object[]{str1[i]});
+	            sum += Double.valueOf(str1[i]);
+	            assertTrue(ac.getValue( ) instanceof Double);
+	            assertEquals( sum, ac.getValue( ) );
+	        }
+	        ac.finish();
+        }
+
+        {
+	        ac.start();
+	        ac.finish();
+	        assertEquals(null, ac.getValue());
+        }
+
         // test Total.RUNNINGSUM() for BigDecimal data
-        BigDecimal bigSum = BigDecimal.ZERO;
+        Double bigSum = 0.0D;
         ac.start( );
-		for ( int i = 0; i < bigDecimalArray.length; i++ )
-		{
-			ac.onRow( new Object[]{
-				bigDecimalArray[i]
-			} );
-			bigSum = bigSum.add( bigDecimalArray[i] );
-			Object ret = ac.getValue( );
-			assertTrue( ret instanceof BigDecimal );
-			assertTrue( bigSum.compareTo( (BigDecimal) ret ) == 0 );
-		}
+        for ( int i = 0; i < bigDecimalArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                bigDecimalArray[i]
+            } );
+            bigSum += bigDecimalArray[i].doubleValue();
+            Object ret = ac.getValue( );
+            assertTrue( ret instanceof Double );
+            assertEquals( bigSum, ret );
+        }
         ac.finish();
     }
-    
+	@Test
     public void testTotalAve() throws Exception
     {
         IAggrFunction ag = buildInAggrFactory.getAggregation("ave");
@@ -599,7 +699,15 @@ public class TotalTest extends TestCase
         assertEquals(IAggrFunction.SUMMARY_AGGR, ag.getType());
         assertEquals(1, ag.getParameterDefn().length);
         assertTrue(!ag.getParameterDefn()[0].isOptional());
-        
+
+        ac.start();
+        for ( int i = 0; i < dates.length; i++ )
+        {
+            ac.onRow( new Object[]{dates[i]} );
+        }
+        ac.finish();
+        assertEquals( 2500000D, ac.getValue() );
+
         ac.start();
         for(int i=0; i<doubleArray1.length; i++)
         {
@@ -607,7 +715,7 @@ public class TotalTest extends TestCase
         }
         ac.finish();
         assertEquals(new Double(5.466666666666667), ac.getValue());
-        
+
         ac.start();
         for(int i=0; i<doubleArray2.length; i++)
         {
@@ -615,7 +723,7 @@ public class TotalTest extends TestCase
         }
         ac.finish();
         assertEquals(new Double(4.928571428571429), ac.getValue());
-        
+
         ac.start();
         for(int i=0; i<str1.length; i++)
         {
@@ -623,11 +731,11 @@ public class TotalTest extends TestCase
         }
         ac.finish();
         assertEquals(new Double(4.928571428571429), ac.getValue());
-        
+
         ac.start();
         ac.finish();
         assertEquals(null, ac.getValue());
-        
+
         ac.start();
         try
         {
@@ -638,21 +746,21 @@ public class TotalTest extends TestCase
         {
             assertTrue(true);
         }
-        
+
         // test Total.AVE() for BigDecimal data
-		ac.start( );
-		for ( int i = 0; i < bigDecimalArray.length; i++ )
-		{
-			ac.onRow( new Object[]{
-				bigDecimalArray[i]
-			} );
-		}
-		ac.finish( );
-		Object ret = ac.getValue( );
-		assertTrue( ret instanceof BigDecimal );
-		assertTrue( new BigDecimal( "5.466666666666666666666666666666667" ).compareTo( (BigDecimal) ret ) == 0 );
-	}
-    
+        ac.start( );
+        for ( int i = 0; i < bigDecimalArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                bigDecimalArray[i]
+            } );
+        }
+        ac.finish( );
+        Object ret = ac.getValue( );
+        assertTrue( ret instanceof Double );
+        assertEquals( 5.466666666666666666666666666666667D, ret );
+    }
+	@Test
     public void testTotalFirst() throws Exception
     {
         IAggrFunction ag = buildInAggrFactory.getAggregation("first");
@@ -661,7 +769,7 @@ public class TotalTest extends TestCase
         assertEquals(IAggrFunction.SUMMARY_AGGR, ag.getType());
         assertEquals(1, ag.getParameterDefn().length);
         assertTrue(!ag.getParameterDefn()[0].isOptional());
-        
+
         ac.start();
         for(int i=0; i<doubleArray1.length; i++)
         {
@@ -669,7 +777,7 @@ public class TotalTest extends TestCase
         }
         ac.finish();
         assertEquals(new Double(1.0), ac.getValue());
-        
+
         ac.start();
         for(int i=0; i<doubleArray2.length; i++)
         {
@@ -677,7 +785,7 @@ public class TotalTest extends TestCase
         }
         ac.finish();
         assertEquals(new Double(4), ac.getValue());
-        
+
         ac.start();
         for(int i=0; i<str1.length; i++)
         {
@@ -685,11 +793,11 @@ public class TotalTest extends TestCase
         }
         ac.finish();
         assertEquals("4", ac.getValue());
-        
+
         ac.start();
         ac.finish();
         assertEquals(null, ac.getValue());
-        
+
         ac.start();
         try
         {
@@ -700,21 +808,21 @@ public class TotalTest extends TestCase
         {
             assertTrue(true);
         }
-        
+
         // test Total.FIRST() for BigDecimal data
-		ac.start( );
-		for ( int i = 0; i < bigDecimalArray.length; i++ )
-		{
-			ac.onRow( new Object[]{
-				bigDecimalArray[i]
-			} );
-		}
-		ac.finish( );
-		Object ret = ac.getValue( );
-		assertTrue( ret instanceof BigDecimal );
-		assertTrue( new BigDecimal( 1 ).compareTo( (BigDecimal) ret ) == 0 );
+        ac.start( );
+        for ( int i = 0; i < bigDecimalArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                bigDecimalArray[i]
+            } );
+        }
+        ac.finish( );
+        Object ret = ac.getValue( );
+        assertTrue( ret instanceof BigDecimal );
+        assertTrue( new BigDecimal( 1 ).compareTo( (BigDecimal) ret ) == 0 );
     }
-    
+	@Test
     public void testTotalLast() throws Exception
     {
         IAggrFunction ag = buildInAggrFactory.getAggregation("last");
@@ -723,7 +831,7 @@ public class TotalTest extends TestCase
         assertEquals(IAggrFunction.SUMMARY_AGGR, ag.getType());
         assertEquals(1, ag.getParameterDefn().length);
         assertTrue(!ag.getParameterDefn()[0].isOptional());
-        
+
         ac.start();
         for(int i=0; i<doubleArray1.length; i++)
         {
@@ -731,7 +839,7 @@ public class TotalTest extends TestCase
         }
         ac.finish();
         assertEquals(new Double(7.0), ac.getValue());
-        
+
         ac.start();
         for(int i=0; i<doubleArray2.length; i++)
         {
@@ -739,7 +847,7 @@ public class TotalTest extends TestCase
         }
         ac.finish();
         assertEquals(new Double(34.0), ac.getValue());
-        
+
         ac.start();
         for(int i=0; i<str1.length; i++)
         {
@@ -747,11 +855,11 @@ public class TotalTest extends TestCase
         }
         ac.finish();
         assertEquals("34", ac.getValue());
-        
+
         ac.start();
         ac.finish();
         assertEquals(null, ac.getValue());
-        
+
         ac.start();
         try
         {
@@ -763,19 +871,19 @@ public class TotalTest extends TestCase
             assertTrue(true);
         }
         // test Total.LAST() for BigDecimal data
-		ac.start( );
-		for ( int i = 0; i < bigDecimalArray.length; i++ )
-		{
-			ac.onRow( new Object[]{
-				bigDecimalArray[i]
-			} );
-		}
-		ac.finish( );
-		Object ret = ac.getValue( );
-		assertTrue( ret instanceof BigDecimal );
-		assertTrue( new BigDecimal( 7 ).compareTo( (BigDecimal) ret ) == 0 );
+        ac.start( );
+        for ( int i = 0; i < bigDecimalArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                bigDecimalArray[i]
+            } );
+        }
+        ac.finish( );
+        Object ret = ac.getValue( );
+        assertTrue( ret instanceof BigDecimal );
+        assertTrue( new BigDecimal( 7 ).compareTo( (BigDecimal) ret ) == 0 );
     }
-    
+	@Test
     public void testTotalMax() throws Exception
     {
         IAggrFunction ag = buildInAggrFactory.getAggregation("max");
@@ -784,7 +892,7 @@ public class TotalTest extends TestCase
         assertEquals(IAggrFunction.SUMMARY_AGGR, ag.getType());
         assertEquals(1, ag.getParameterDefn().length);
         assertTrue(!ag.getParameterDefn()[0].isOptional());
-        
+
         ac.start();
         for(int i=0; i<doubleArray1.length; i++)
         {
@@ -792,7 +900,7 @@ public class TotalTest extends TestCase
         }
         ac.finish();
         assertEquals(new Double(10.0), ac.getValue());
-        
+
         ac.start();
         for(int i=0; i<doubleArray2.length; i++)
         {
@@ -800,7 +908,7 @@ public class TotalTest extends TestCase
         }
         ac.finish();
         assertEquals(new Double(63.0), ac.getValue());
-        
+
         ac.start();
         for(int i=0; i<str1.length; i++)
         {
@@ -808,11 +916,11 @@ public class TotalTest extends TestCase
         }
         ac.finish();
         assertEquals("63", ac.getValue());
-        
+
         ac.start();
         ac.finish();
         assertEquals(null, ac.getValue());
-        
+
         ac.start();
         try
         {
@@ -824,19 +932,19 @@ public class TotalTest extends TestCase
             assertTrue(true);
         }
         // test Total.MAX() for BigDecimal data
-		ac.start( );
-		for ( int i = 0; i < bigDecimalArray.length; i++ )
-		{
-			ac.onRow( new Object[]{
-				bigDecimalArray[i]
-			} );
-		}
-		ac.finish( );
-		Object ret = ac.getValue( );
-		assertTrue( ret instanceof BigDecimal );
-		assertTrue( new BigDecimal( 10 ).compareTo( (BigDecimal) ret ) == 0 );
+        ac.start( );
+        for ( int i = 0; i < bigDecimalArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                bigDecimalArray[i]
+            } );
+        }
+        ac.finish( );
+        Object ret = ac.getValue( );
+        assertTrue( ret instanceof BigDecimal );
+        assertTrue( new BigDecimal( 10 ).compareTo( (BigDecimal) ret ) == 0 );
     }
-    
+	@Test
     public void testTotalMin() throws Exception
     {
         IAggrFunction ag = buildInAggrFactory.getAggregation("min");
@@ -845,7 +953,7 @@ public class TotalTest extends TestCase
         assertEquals(IAggrFunction.SUMMARY_AGGR, ag.getType());
         assertEquals(1, ag.getParameterDefn().length);
         assertTrue(!ag.getParameterDefn()[0].isOptional());
-        
+
         ac.start();
         for(int i=0; i<doubleArray1.length; i++)
         {
@@ -853,7 +961,7 @@ public class TotalTest extends TestCase
         }
         ac.finish();
         assertEquals(new Double(1.0), ac.getValue());
-        
+
         ac.start();
         for(int i=0; i<doubleArray2.length; i++)
         {
@@ -861,7 +969,7 @@ public class TotalTest extends TestCase
         }
         ac.finish();
         assertEquals(new Double(-43), ac.getValue());
-        
+
         ac.start();
         for(int i=0; i<str1.length; i++)
         {
@@ -869,11 +977,11 @@ public class TotalTest extends TestCase
         }
         ac.finish();
         assertEquals("-15", ac.getValue());
-        
+
         ac.start();
         ac.finish();
         assertEquals(null, ac.getValue());
-        
+
         ac.start();
         try
         {
@@ -884,21 +992,104 @@ public class TotalTest extends TestCase
         {
             assertTrue(true);
         }
-        
+
         // test Total.MIN() for BigDecimal data
+        ac.start( );
+        for ( int i = 0; i < bigDecimalArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                bigDecimalArray[i]
+            } );
+        }
+        ac.finish( );
+        Object ret = ac.getValue( );
+        assertTrue( ret instanceof BigDecimal );
+        assertTrue( new BigDecimal( 1 ).compareTo( (BigDecimal) ret ) == 0 );
+    }
+	
+	@Test
+	public void testTotalRange( ) throws Exception
+	{
+		IAggrFunction ag = buildInAggrFactory.getAggregation( "range" );
+		Accumulator ac = ag.newAccumulator( );
+		assertEquals( IBuildInAggregation.TOTAL_RANGE_FUNC, ag.getName( ) );
+		assertEquals( IAggrFunction.SUMMARY_AGGR, ag.getType( ) );
+		assertEquals( 1, ag.getParameterDefn( ).length );
+		assertTrue( !ag.getParameterDefn( )[0].isOptional( ) );
+
+		ac.start( );
+		for ( int i = 0; i < doubleArray1.length; i++ )
+		{
+			ac.onRow( new Double[]{
+					new Double( doubleArray1[i] )
+			} );
+		}
+		ac.finish( );
+		assertEquals( new Double( 9.0 ), ac.getValue( ) );
+
+		ac.start( );
+		for ( int i = 0; i < doubleArray2.length; i++ )
+		{
+			ac.onRow( new Double[]{
+					new Double( doubleArray2[i] )
+			} );
+		}
+		ac.finish( );
+		assertEquals( new Double( 106 ), ac.getValue( ) );
+
+		// String data type returns 0
+		ac.start( );
+		for ( int i = 0; i < str1.length; i++ )
+		{
+			ac.onRow( new Object[]{
+					str1[i]
+			} );
+		}
+		ac.finish( );
+		assertEquals( 0d, ac.getValue( ) );
+		
+		// Null data returns null
+		ac.start( );
+		for ( int i = 0; i < doubleArrayNull.length; i++ )
+		{
+			ac.onRow( new Object[]{
+					doubleArrayNull[i]
+			} );
+		}		
+		ac.finish( );
+		assertEquals( null, ac.getValue( ) );
+
+		// No data returns null
+		ac.start( );
+		ac.finish( );
+		assertEquals( null, ac.getValue( ) );
+
+		ac.start( );
+		try
+		{
+			ac.getValue( );
+			assertTrue( false );
+		}
+		catch ( RuntimeException e )
+		{
+			assertTrue( true );
+		}
+
+		// test Total.RANGE() for BigDecimal data
 		ac.start( );
 		for ( int i = 0; i < bigDecimalArray.length; i++ )
 		{
 			ac.onRow( new Object[]{
-				bigDecimalArray[i]
+					bigDecimalArray[i]
 			} );
 		}
 		ac.finish( );
 		Object ret = ac.getValue( );
-		assertTrue( ret instanceof BigDecimal );
-		assertTrue( new BigDecimal( 1 ).compareTo( (BigDecimal) ret ) == 0 );
-    }
-    
+		assertTrue( ret instanceof Double );
+		assertEquals( 9D, ret );
+	}
+	
+	@Test
     public void testTotalMedian() throws Exception
     {
         IAggrFunction ag = buildInAggrFactory.getAggregation("median");
@@ -907,7 +1098,7 @@ public class TotalTest extends TestCase
         assertEquals(IAggrFunction.SUMMARY_AGGR, ag.getType());
         assertEquals(1, ag.getParameterDefn().length);
         assertTrue(!ag.getParameterDefn()[0].isOptional());
-        
+
         ac.start();
         for(int i=0; i<doubleArray1.length; i++)
         {
@@ -915,7 +1106,7 @@ public class TotalTest extends TestCase
         }
         ac.finish();
         assertEquals(new Double(5.0), ac.getValue());
-        
+
         ac.start();
         for(int i=0; i<doubleArray2.length; i++)
         {
@@ -923,19 +1114,19 @@ public class TotalTest extends TestCase
         }
         ac.finish();
         assertEquals(new Double(3.5), ac.getValue());
-        
+
         ac.start();
         for(int i=0; i<str1.length; i++)
         {
             ac.onRow(new Object[]{str1[i]});
         }
         ac.finish();
-        assertEquals(new Double(3.5), ac.getValue());
-        
+        assertEquals(new Double(3.5D), ac.getValue());
+
         ac.start();
         ac.finish();
         assertEquals(null, ac.getValue());
-        
+
         ac.start();
         try
         {
@@ -946,40 +1137,40 @@ public class TotalTest extends TestCase
         {
             assertTrue(true);
         }
-        
+
         //median test for Date
         //1:
         ac.start();
-	    for ( int i = 0; i < dates.length; i++ )
-		{
-			ac.onRow( new Object[]{dates[i]} );
-		}
+        for ( int i = 0; i < dates.length; i++ )
+        {
+            ac.onRow( new Object[]{dates[i]} );
+        }
         ac.finish();
-        assertEquals( ac.getValue(), new Date(2500000L) );
+        assertEquals( 2500000D, ac.getValue() );
         //2:
         ac.start();
-	    for ( int i = 0; i < dates2.length; i++ )
-		{
-			ac.onRow( new Object[]{dates2[i]} );
-		}
+        for ( int i = 0; i < dates2.length; i++ )
+        {
+            ac.onRow( new Object[]{dates2[i]} );
+        }
         ac.finish();
-        assertEquals( ac.getValue(),  new Date(2000000L) );
-        
+        assertEquals( 2000000D, ac.getValue() );
+
         // test Total.MEDIAN() for BigDecimal data
-		ac.start( );
-		for ( int i = 0; i < bigDecimalArray.length; i++ )
-		{
-			ac.onRow( new Object[]{
-				bigDecimalArray[i]
-			} );
-		}
-		ac.finish( );
-		Object ret = ac.getValue( );
-		assertTrue( ret instanceof BigDecimal );
-		assertTrue( new BigDecimal( 5 ).compareTo( (BigDecimal) ret ) == 0 );
+        ac.start( );
+        for ( int i = 0; i < bigDecimalArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                bigDecimalArray[i]
+            } );
+        }
+        ac.finish( );
+        Object ret = ac.getValue( );
+        assertTrue( ret instanceof Double );
+        assertEquals( 5D, ret );
 
     }
-    
+	@Test
     public void testTotalMode() throws Exception
     {
         IAggrFunction ag = buildInAggrFactory.getAggregation("mode");
@@ -988,7 +1179,7 @@ public class TotalTest extends TestCase
         assertEquals(IAggrFunction.SUMMARY_AGGR, ag.getType());
         assertEquals(1, ag.getParameterDefn().length);
         assertTrue(!ag.getParameterDefn()[0].isOptional());
-        
+
         ac.start();
         for(int i=0; i<doubleArray1.length; i++)
         {
@@ -996,7 +1187,7 @@ public class TotalTest extends TestCase
         }
         ac.finish();
         assertEquals(new Double(4.0), ac.getValue());
-        
+
         ac.start();
         for(int i=0; i<doubleArray2.length; i++)
         {
@@ -1004,7 +1195,7 @@ public class TotalTest extends TestCase
         }
         ac.finish();
         assertEquals(new Double(4.0), ac.getValue());
-        
+
         // double4: unique numbers
         ac.start();
         for(int i=0; i<doubleArray4.length; i++)
@@ -1021,16 +1212,16 @@ public class TotalTest extends TestCase
         }
         ac.finish();
         assertEquals(new Double(1.0), ac.getValue());
-        
-		ac.start( );
-		for ( int i = 0; i < doubleArray6.length; i++ )
-		{
-			ac.onRow( new Double[]{
-				new Double( doubleArray6[i] )
-			} );
-		}
-		ac.finish( );
-		assertEquals( new Double( 1.0 ), ac.getValue( ) );
+
+        ac.start( );
+        for ( int i = 0; i < doubleArray6.length; i++ )
+        {
+            ac.onRow( new Double[]{
+                new Double( doubleArray6[i] )
+            } );
+        }
+        ac.finish( );
+        assertEquals( new Double( 1.0 ), ac.getValue( ) );
 
         ac.start();
         for(int i=0; i<str1.length; i++)
@@ -1038,12 +1229,12 @@ public class TotalTest extends TestCase
             ac.onRow(new Object[]{str1[i]});
         }
         ac.finish();
-        assertEquals(new Double(4.0), ac.getValue());
-        
+        assertEquals("4", ac.getValue());
+
         ac.start();
         ac.finish();
         assertEquals(null, ac.getValue());
-        
+
         ac.start();
         try
         {
@@ -1054,7 +1245,7 @@ public class TotalTest extends TestCase
         {
             assertTrue(true);
         }
-        
+
         ac.start();
         ac.onRow( new Double[]{ new Double(4)} );
         ac.onRow( new Double[]{ new Double(4)} );
@@ -1064,35 +1255,35 @@ public class TotalTest extends TestCase
         //mode test for Date
         //1: no mode date
         ac.start();
-	    for ( int i = 0; i < dates.length; i++ )
-		{
-			ac.onRow( new Object[]{dates[i]} );
-		}
+        for ( int i = 0; i < dates.length; i++ )
+        {
+            ac.onRow( new Object[]{dates[i]} );
+        }
         ac.finish();
         assertEquals( ac.getValue(), null );
         //2: mode date is  new Date(2000000L)
         ac.start();
-	    for ( int i = 0; i < dates2.length; i++ )
-		{
-			ac.onRow( new Object[]{dates2[i]} );
-		}
+        for ( int i = 0; i < dates2.length; i++ )
+        {
+            ac.onRow( new Object[]{dates2[i]} );
+        }
         ac.finish();
         assertEquals( ac.getValue(),  new Date(2000000L) );
 
         // test Total.MODE() for BigDecimal data
-		ac.start( );
-		for ( int i = 0; i < bigDecimalArray.length; i++ )
-		{
-			ac.onRow( new Object[]{
-				bigDecimalArray[i]
-			} );
-		}
-		ac.finish( );
-		Object ret = ac.getValue( );
-		assertTrue( ret instanceof BigDecimal );
-		assertTrue( new BigDecimal( 4 ).compareTo( (BigDecimal) ret ) == 0 );
+        ac.start( );
+        for ( int i = 0; i < bigDecimalArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                bigDecimalArray[i]
+            } );
+        }
+        ac.finish( );
+        Object ret = ac.getValue( );
+        assertTrue( ret instanceof BigDecimal );
+        assertTrue( new BigDecimal( 4 ).compareTo( (BigDecimal) ret ) == 0 );
     }
-    
+	@Test
     public void testTotalStdDev() throws Exception
     {
         IAggrFunction ag = buildInAggrFactory.getAggregation("stddev");
@@ -1101,15 +1292,15 @@ public class TotalTest extends TestCase
         assertEquals(IAggrFunction.SUMMARY_AGGR, ag.getType());
         assertEquals(1, ag.getParameterDefn().length);
         assertTrue(!ag.getParameterDefn()[0].isOptional());
-        
+
         ac.start();
         for(int i=0; i<doubleArray1.length; i++)
         {
             ac.onRow(new Double[]{new Double(doubleArray1[i])});
         }
         ac.finish();
-        assertEquals(new Double(2.445598573141631), ac.getValue());
-        
+        assertEquals(2.445598573141631D, ac.getValue());
+
         ac.start();
         for(int i=0; i<doubleArray2.length; i++)
         {
@@ -1117,19 +1308,19 @@ public class TotalTest extends TestCase
         }
         ac.finish();
         assertEquals(new Double(26.560422510872147), ac.getValue());
-        
+
         ac.start();
         for(int i=0; i<str1.length; i++)
         {
             ac.onRow(new Object[]{str1[i]});
         }
         ac.finish();
-        assertEquals(new Double(26.560422510872147), ac.getValue());
-        
+        assertEquals(26.560422510872147D, ac.getValue());
+
         ac.start();
         ac.finish();
         assertEquals(null, ac.getValue());
-        
+
         ac.start();
         try
         {
@@ -1140,23 +1331,22 @@ public class TotalTest extends TestCase
         {
             assertTrue(true);
         }
-        
+
         // test Total.StdDEV() for BigDecimal data
-		ac.start( );
-		for ( int i = 0; i < bigDecimalArray.length; i++ )
-		{
-			ac.onRow( new Object[]{
-				bigDecimalArray[i]
-			} );
-		}
-		ac.finish( );
-		Object ret = ac.getValue( );
-		assertTrue( ret instanceof BigDecimal );
-		assertTrue( new BigDecimal( "2.445598573141631" ).compareTo( (BigDecimal) ret ) == 0 );
+        ac.start( );
+        for ( int i = 0; i < bigDecimalArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                bigDecimalArray[i]
+            } );
+        }
+        ac.finish( );
+        Object ret = ac.getValue( );
+        assertTrue( ret instanceof Double );
+        assertEquals( 2.445598573141631D, ret );
 
     }
-    
-    
+	@Test
     public void testTotalVariance() throws Exception
     {
         IAggrFunction ag = buildInAggrFactory.getAggregation("variance");
@@ -1165,15 +1355,15 @@ public class TotalTest extends TestCase
         assertEquals(IAggrFunction.SUMMARY_AGGR, ag.getType());
         assertEquals(1, ag.getParameterDefn().length);
         assertTrue(!ag.getParameterDefn()[0].isOptional());
-        
+
         ac.start();
         for(int i=0; i<doubleArray1.length; i++)
         {
             ac.onRow(new Double[]{new Double(doubleArray1[i])});
         }
         ac.finish();
-        assertEquals(new Double(5.980952380952381), ac.getValue());
-        
+        assertEquals(5.980952380952381D, ac.getValue());
+
         ac.start();
         for(int i=0; i<doubleArray2.length; i++)
         {
@@ -1181,19 +1371,19 @@ public class TotalTest extends TestCase
         }
         ac.finish();
         assertEquals(new Double(705.4560439560439), ac.getValue());
-        
+
         ac.start();
         for(int i=0; i<str1.length; i++)
         {
             ac.onRow(new Object[]{str1[i]});
         }
         ac.finish();
-        assertEquals(new Double(705.4560439560439), ac.getValue());
-        
+        assertEquals(705.4560439560439D, ac.getValue());
+
         ac.start();
         ac.finish();
         assertEquals(null, ac.getValue());
-        
+
         ac.start();
         try
         {
@@ -1204,22 +1394,21 @@ public class TotalTest extends TestCase
         {
             assertTrue(true);
         }
-        
-        // test Total.Variance() for BigDecimal data
-		ac.start( );
-		for ( int i = 0; i < bigDecimalArray.length; i++ )
-		{
-			ac.onRow( new Object[]{
-				bigDecimalArray[i]
-			} );
-		}
-		ac.finish( );
-		Object ret = ac.getValue( );
-		assertTrue( ret instanceof BigDecimal );
-		assertTrue( new BigDecimal( "5.980952380952380952380952380952381" ).compareTo( (BigDecimal) ret ) == 0 );
-	}
-    
 
+        // test Total.Variance() for BigDecimal data
+        ac.start( );
+        for ( int i = 0; i < bigDecimalArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                bigDecimalArray[i]
+            } );
+        }
+        ac.finish( );
+        Object ret = ac.getValue( );
+        assertTrue( ret instanceof Double );
+        assertEquals( 5.980952380952380952380952380952381D, ret );
+    }
+	@Test
     public void testTotalWeightedAva() throws Exception
     {
         IAggrFunction ag = buildInAggrFactory.getAggregation("weightedAve");
@@ -1229,63 +1418,63 @@ public class TotalTest extends TestCase
         assertEquals(2, ag.getParameterDefn().length);
         assertTrue(!ag.getParameterDefn()[0].isOptional());
         assertTrue(!ag.getParameterDefn()[1].isOptional());
-        
+
         ac.start();
         for(int i=0; i<doubleArray1.length; i++)
         {
             ac.onRow(new Double[]{new Double(doubleArray1[i]), new Double(weight[i])});
         }
         ac.finish();
-       
+
         assertEquals(new Double(5.343042071197409), ac.getValue());
-        
+
         ac.start();
         for(int i=0; i<doubleArray2.length; i++)
         {
             ac.onRow(new Double[]{new Double(doubleArray2[i]), new Double(weight[i])});
         }
         ac.finish();
-        
+
         assertEquals(new Double(3.236104279390063), ac.getValue());
-        
+
         ac.start();
         for(int i=0; i<str1.length; i++)
         {
             ac.onRow(new Object[]{str1[i], new Double(weight[i])});
         }
         ac.finish();
-       
-        assertEquals(new Double(3.236104279390063), ac.getValue());
-       
+
+        assertEquals(3.236104279390063D, ac.getValue());
+
         ac.start();
         ac.onRow(new Object[]{new Double(1), new Double(1)});
         ac.onRow(new Object[]{new Double(2), new Double(2)});
         ac.finish();
         assertEquals(new Double(1.6666666666666667), ac.getValue());
-        
+
         ac.start();
         ac.onRow(new Object[]{null, new Double(3)});
         ac.onRow(new Object[]{new Double(2), new Double(2)});
         ac.onRow(new Object[]{new Double(2), null});
         ac.finish();
         assertEquals(new Double(2), ac.getValue());
-        
+
         ac.start();
         ac.onRow(new Object[]{new Double(1), new Double(3)});
         ac.onRow(new Object[]{new Double(1), new Double(-3)});
         ac.finish();
-        assertEquals(null, ac.getValue());
-        
+        assertEquals(Double.NaN, ac.getValue());
+
         ac.start();
         ac.onRow(new Object[]{new Double(1), new Double(2)});
         ac.onRow(new Object[]{new Double(2), new Double(-4)});
         ac.finish();
         assertEquals(new Double(3.0), ac.getValue());
-        
+
         ac.start();
         ac.finish();
         assertEquals(null, ac.getValue());
-        
+
         ac.start();
         try
         {
@@ -1296,26 +1485,26 @@ public class TotalTest extends TestCase
         {
             assertTrue(true);
         }
-        
+
         // test Total.WeightedAve() for BigDecimal data
-		ac.start( );
-		for ( int i = 0; i < bigDecimalArray.length; i++ )
-		{
-			ac.onRow( new Object[]{
-					bigDecimalArray[i], new Double( weight[i] )
-			} );
-		}
-		ac.finish( );
-		Object ret = ac.getValue( );
-		assertTrue( ret instanceof BigDecimal );
-		assertTrue( new BigDecimal( "5.343042071197411003236245954692557" ).compareTo( (BigDecimal) ret ) == 0 );
+        ac.start( );
+        for ( int i = 0; i < bigDecimalArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                    bigDecimalArray[i], new Double( weight[i] )
+            } );
+        }
+        ac.finish( );
+        Object ret = ac.getValue( );
+        assertTrue( ret instanceof Double );
+        assertEquals( 5.343042071197409D, ret );
 
     }
-    
+	@Test
     public void testTotalMovingAve() throws Exception
     {
         double[] values1 = new double[]{1.0, 2.0, 3.0, 3.25, 3.8, 4.5, 4.285714285714286, 4.25, 4.75, 5.25, 5.75, 6.5, 6.25, 6, 6.5};
-        double[] values2 = new double[]{4.0, -19.5, -11.666666666666666, -3.0, -5.4, -5.5, -5.5, 0.6666666666666666, 0.5, 7.1666666666666666, 15.1666666666666666, 15.1666666666666666, 10.6666666666666666, 17.3333333333333333};
+        String[] values2 = new String[]{"4", "-19.5", "-11.66666666666666666666666666666667", "-3", "-5.4", "-5.5", "-5.5", "0.6666666666666666666666666666666667", "0.5", "7.166666666666666666666666666666667", "15.16666666666666666666666666666667", "15.16666666666666666666666666666667", "10.66666666666666666666666666666667", "17.33333333333333333333333333333333"};
         IAggrFunction ag = buildInAggrFactory.getAggregation("movingAve");
         Accumulator ac = ag.newAccumulator();
         assertEquals(IBuildInAggregation.TOTAL_MOVINGAVE_FUNC, ag.getName());
@@ -1323,7 +1512,7 @@ public class TotalTest extends TestCase
         assertEquals(2, ag.getParameterDefn().length);
         assertTrue(!ag.getParameterDefn()[0].isOptional());
         assertTrue(!ag.getParameterDefn()[1].isOptional());
-        
+
 
         ac.start();
         for(int i=0; i<doubleArray1.length; i++)
@@ -1332,63 +1521,63 @@ public class TotalTest extends TestCase
             assertEquals(new Double(values1[i]), ac.getValue());
         }
         ac.finish();
-        
+
         ac.start();
         for(int i=0; i<doubleArray2.length; i++)
         {
             ac.onRow(new Object[]{new Double(doubleArray2[i]), new Integer(6)});
-            assertEquals(new Double(values2[i]), ac.getValue());
+            assertEquals(Double.valueOf(values2[i]), ac.getValue());
         }
         ac.finish();
-        
+
         ac.start();
         for(int i=0; i<str1.length; i++)
         {
             ac.onRow(new Object[]{str1[i], new Integer(6)});
-            assertEquals(new Double(values2[i]), ac.getValue());
+            assertEquals(Double.valueOf(values2[i]), ac.getValue());
         }
         ac.finish();
-        
+
         ac.start();
         ac.finish();
         assertEquals(null, ac.getValue());
-        
+
         // test Total.MovingAve() for BigDecimal data
         BigDecimal[] expectResults = new BigDecimal[]{
-				new BigDecimal( "1.0" ),
-				new BigDecimal( "2.0" ),
-				new BigDecimal( "3.0" ),
-				new BigDecimal( "3.25" ),
-				new BigDecimal( "3.8" ),
-				new BigDecimal( "4.5" ),
-				new BigDecimal( "4.285714285714285714285714285714286" ),
-				new BigDecimal( "4.25" ),
-				new BigDecimal( "4.75" ),
-				new BigDecimal( "5.25" ),
-				new BigDecimal( "5.75" ),
-				new BigDecimal( "6.5" ),
-				new BigDecimal( "6.25" ),
-				new BigDecimal( "6.0" ),
-				new BigDecimal( "6.5" )
-		};
-        
-		ac.start( );
-		for ( int i = 0; i < bigDecimalArray.length; i++ )
-		{
-			ac.onRow( new Object[]{
-					bigDecimalArray[i], 8
-			} );
-			Object ret = ac.getValue( );
-			assertTrue( ret instanceof BigDecimal );
-			assertTrue( expectResults[i].compareTo( (BigDecimal) ret ) == 0 );
-		}
-		ac.finish( );
-        
+                new BigDecimal( "1.0" ),
+                new BigDecimal( "2.0" ),
+                new BigDecimal( "3.0" ),
+                new BigDecimal( "3.25" ),
+                new BigDecimal( "3.8" ),
+                new BigDecimal( "4.5" ),
+                new BigDecimal( "4.285714285714285714285714285714286" ),
+                new BigDecimal( "4.25" ),
+                new BigDecimal( "4.75" ),
+                new BigDecimal( "5.25" ),
+                new BigDecimal( "5.75" ),
+                new BigDecimal( "6.5" ),
+                new BigDecimal( "6.25" ),
+                new BigDecimal( "6.0" ),
+                new BigDecimal( "6.5" )
+        };
+
+        ac.start( );
+        for ( int i = 0; i < bigDecimalArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                    bigDecimalArray[i], 8
+            } );
+            Object ret = ac.getValue( );
+            assertTrue( ret instanceof Double );
+            assertEquals( expectResults[i].doubleValue(), ret );
+        }
+        ac.finish( );
+
     }
-    
+	@Test
     public void testTotalAveDate() throws Exception
     {
-                                
+
         IAggrFunction ag = buildInAggrFactory.getAggregation("ave");
         Accumulator ac = ag.newAccumulator();
         ac.start();
@@ -1397,11 +1586,10 @@ public class TotalTest extends TestCase
             ac.onRow(new Object[]{dates[i]});
         }
         ac.finish();
-        assertEquals(new Date(2500000L), ac.getValue());
+        assertEquals(2500000D, ac.getValue());
 
     }
-
-
+	@Test
     public void testTotalMaxDate() throws Exception
     {                                
         IAggrFunction ag = buildInAggrFactory.getAggregation("max");
@@ -1415,7 +1603,7 @@ public class TotalTest extends TestCase
         assertEquals(new Date(4000000L), ac.getValue());
 
     }
-    
+	@Test
     public void testTotalMinDate() throws Exception
     {
         IAggrFunction ag = buildInAggrFactory.getAggregation("min");
@@ -1429,7 +1617,7 @@ public class TotalTest extends TestCase
         assertEquals(new Date(1000000L), ac.getValue());
 
     }
-    
+	@Test
     public void testTotalMaxString() throws Exception
     {
         IAggrFunction ag = buildInAggrFactory.getAggregation("max");
@@ -1442,7 +1630,7 @@ public class TotalTest extends TestCase
         ac.finish();
         assertEquals("test", ac.getValue());
     }
-    
+	@Test
     public void testTotalMinString() throws Exception
     {
         IAggrFunction ag = buildInAggrFactory.getAggregation("min");
@@ -1455,7 +1643,7 @@ public class TotalTest extends TestCase
         ac.finish();
         assertEquals("aggregation", ac.getValue());
     }
-    
+	@Test
     public void testTotalTop() throws Exception
     {
         IAggrFunction ag = buildInAggrFactory.getAggregation("isTopN");
@@ -1465,14 +1653,14 @@ public class TotalTest extends TestCase
         assertEquals(2, ag.getParameterDefn().length);
         assertTrue(!ag.getParameterDefn()[0].isOptional());
         assertTrue(!ag.getParameterDefn()[1].isOptional());
-        
+
         ac.start();
         for(int i=0; i<doubleArray1.length; i++)
         {
             ac.onRow(new Double[]{new Double(doubleArray1[i]), new Double(5)});
         }
         ac.finish();
-        
+
         ac.start();
         for(int i=0; i<doubleArray1.length; i++)
         {
@@ -1480,7 +1668,7 @@ public class TotalTest extends TestCase
             assertEquals(new Boolean(doubleArray1TopBottom[i]), ac.getValue());
         }
         ac.finish();
-        
+
         ag = buildInAggrFactory.getAggregation("isTopN");
         ac = ag.newAccumulator();
         assertEquals(IBuildInAggregation.TOTAL_TOP_N_FUNC, ag.getName());
@@ -1488,38 +1676,38 @@ public class TotalTest extends TestCase
         assertEquals(2, ag.getParameterDefn().length);
         assertTrue(!ag.getParameterDefn()[0].isOptional());
         assertTrue(!ag.getParameterDefn()[1].isOptional());
-        
+
         ac.start();
-        	ac.onRow(new Double[]{new Double(6), new Double(5)});
+            ac.onRow(new Double[]{new Double(6), new Double(5)});
         ac.finish();
         ac.start();
-    	ac.onRow(new Double[]{new Double(6), new Double(5)});
-    	ac.finish();
- 
-        
-       	assertEquals(new Boolean(true), ac.getValue());
-       	
+        ac.onRow(new Double[]{new Double(6), new Double(5)});
+        ac.finish();
+
+
+           assertEquals(new Boolean(true), ac.getValue());
+
         // test Total.ISTOPN() for BigDecimal data
         ac = ag.newAccumulator();
         ac.start( );
-		for ( int i = 0; i < bigDecimalArray.length; i++ )
-		{
-			ac.onRow( new Object[]{
-					bigDecimalArray[i], new Double( 5 )
-			} );
-		}
-		ac.finish( );
-		ac.start( );
-		for ( int i = 0; i < bigDecimalArray.length; i++ )
-		{
-			ac.onRow( new Object[]{
-					bigDecimalArray[i], new Double( 5 )
-			} );
-			assertEquals( new Boolean( doubleArray1TopBottom[i] ),
-					ac.getValue( ) );
-		}
-		ac.finish( );
-      	     
+        for ( int i = 0; i < bigDecimalArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                    bigDecimalArray[i], new Double( 5 )
+            } );
+        }
+        ac.finish( );
+        ac.start( );
+        for ( int i = 0; i < bigDecimalArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                    bigDecimalArray[i], new Double( 5 )
+            } );
+            assertEquals( new Boolean( doubleArray1TopBottom[i] ),
+                    ac.getValue( ) );
+        }
+        ac.finish( );
+
         ag = buildInAggrFactory.getAggregation("isTopNPercent");
         ac = ag.newAccumulator();
         assertEquals(IBuildInAggregation.TOTAL_TOP_PERCENT_FUNC, ag.getName());
@@ -1527,7 +1715,7 @@ public class TotalTest extends TestCase
         assertEquals(2, ag.getParameterDefn().length);
         assertTrue(!ag.getParameterDefn()[0].isOptional());
         assertTrue(!ag.getParameterDefn()[1].isOptional());
-        
+
         ac.start();
         for(int i=0; i<doubleArray1.length; i++)
         {
@@ -1541,29 +1729,29 @@ public class TotalTest extends TestCase
             assertEquals(new Boolean(doubleArray1TopBottom[i]),ac.getValue());
         }
         ac.finish();
-        
+
         // test Total.ISTOPNPercent() for BigDecimal data
         ac = ag.newAccumulator();
         ac.start( );
-		for ( int i = 0; i < bigDecimalArray.length; i++ )
-		{
-			ac.onRow( new Object[]{
-					bigDecimalArray[i], new Double( 33 )
-			} );
-		}
-		ac.finish( );
-		ac.start( );
-		for ( int i = 0; i < bigDecimalArray.length; i++ )
-		{
-			ac.onRow( new Object[]{
-					bigDecimalArray[i], new Double( 33 )
-			} );
-			assertEquals( new Boolean( doubleArray1TopBottom[i] ),
-					ac.getValue( ) );
-		}
-		ac.finish( );
-        
-        
+        for ( int i = 0; i < bigDecimalArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                    bigDecimalArray[i], new Double( 33 )
+            } );
+        }
+        ac.finish( );
+        ac.start( );
+        for ( int i = 0; i < bigDecimalArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                    bigDecimalArray[i], new Double( 33 )
+            } );
+            assertEquals( new Boolean( doubleArray1TopBottom[i] ),
+                    ac.getValue( ) );
+        }
+        ac.finish( );
+
+
         ag = buildInAggrFactory.getAggregation("isTopNPercent");
         ac = ag.newAccumulator();
         assertEquals(IBuildInAggregation.TOTAL_TOP_PERCENT_FUNC, ag.getName());
@@ -1571,21 +1759,22 @@ public class TotalTest extends TestCase
         assertEquals(2, ag.getParameterDefn().length);
         assertTrue(!ag.getParameterDefn()[0].isOptional());
         assertTrue(!ag.getParameterDefn()[1].isOptional());
-        
+
         ac.start();
         ac.onRow(new Double[]{new Double(6), new Double(100)});
         ac.finish();
         ac.start();
         ac.onRow(new Double[]{new Double(6), new Double(100)});
         ac.finish();
-        
+
         assertEquals(new Boolean(true), ac.getValue());
     }
-    
+
     /**
-	 * test top n aggregation with null values. Note: the null values will not
-	 * be considered as the candidates for the result.
-	 */
+     * test top n aggregation with null values. Note: the null values will not
+     * be considered as the candidates for the result.
+     */
+	@Test
     public void testTotalTop2() throws Exception
     {
         IAggrFunction ag = buildInAggrFactory.getAggregation("isTopN");
@@ -1595,14 +1784,14 @@ public class TotalTest extends TestCase
         assertEquals(2, ag.getParameterDefn().length);
         assertTrue(!ag.getParameterDefn()[0].isOptional());
         assertTrue(!ag.getParameterDefn()[1].isOptional());
-        
+
         ac.start();
         for(int i=0; i<doubleArray3.length; i++)
         {
             ac.onRow(new Double[]{doubleArray3[i], new Double(2)});
         }
         ac.finish();
-        
+
         ac.start();
         for(int i=0; i<doubleArray3.length; i++)
         {
@@ -1611,7 +1800,7 @@ public class TotalTest extends TestCase
         }
         ac.finish();
     }
-    
+	@Test
     public void testTotalBottom() throws Exception
     {
         IAggrFunction ag = buildInAggrFactory.getAggregation("isBottomN");
@@ -1621,7 +1810,7 @@ public class TotalTest extends TestCase
         assertEquals(2, ag.getParameterDefn().length);
         assertTrue(!ag.getParameterDefn()[0].isOptional());
         assertTrue(!ag.getParameterDefn()[1].isOptional());
-        
+
         ac.start();
         for(int i=0; i<doubleArray1.length; i++)
         {
@@ -1632,31 +1821,31 @@ public class TotalTest extends TestCase
         for(int i=0; i<doubleArray1.length; i++)
         {
             ac.onRow(new Double[]{new Double(doubleArray1[i]), new Double(10)});
-        	assertEquals(new Boolean(!doubleArray1TopBottom[i]), ac.getValue());
+            assertEquals(new Boolean(!doubleArray1TopBottom[i]), ac.getValue());
         }
         ac.finish();
-        
+
         // test Total.ISBottomN() for BigDecimal data
-		ac = ag.newAccumulator( );
-		ac.start( );
-		for ( int i = 0; i < bigDecimalArray.length; i++ )
-		{
-			ac.onRow( new Object[]{
-					bigDecimalArray[i], new Double( 10 )
-			} );
-		}
-		ac.finish( );
-		ac.start( );
-		for ( int i = 0; i < bigDecimalArray.length; i++ )
-		{
-			ac.onRow( new Object[]{
-					bigDecimalArray[i], new Double( 10 )
-			} );
-			assertEquals( new Boolean( !doubleArray1TopBottom[i] ),
-					ac.getValue( ) );
-		}
-		ac.finish( );
-        
+        ac = ag.newAccumulator( );
+        ac.start( );
+        for ( int i = 0; i < bigDecimalArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                    bigDecimalArray[i], new Double( 10 )
+            } );
+        }
+        ac.finish( );
+        ac.start( );
+        for ( int i = 0; i < bigDecimalArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                    bigDecimalArray[i], new Double( 10 )
+            } );
+            assertEquals( new Boolean( !doubleArray1TopBottom[i] ),
+                    ac.getValue( ) );
+        }
+        ac.finish( );
+
         ag = buildInAggrFactory.getAggregation("isBottomNPercent");
         ac = ag.newAccumulator();
         assertEquals(IBuildInAggregation.TOTAL_BOTTOM_PERCENT_FUNC, ag.getName());
@@ -1664,14 +1853,14 @@ public class TotalTest extends TestCase
         assertEquals(2, ag.getParameterDefn().length);
         assertTrue(!ag.getParameterDefn()[0].isOptional());
         assertTrue(!ag.getParameterDefn()[1].isOptional());
-        
+
         ac.start();
         for(int i=0; i<doubleArray1.length; i++)
         {
             ac.onRow(new Double[]{new Double(doubleArray1[i]), new Double(66)});
         }
         ac.finish();
-        
+
         ac.start();
         for(int i=0; i<doubleArray1.length; i++)
         {
@@ -1679,29 +1868,29 @@ public class TotalTest extends TestCase
             assertEquals(new Boolean(!doubleArray1TopBottom[i]), ac.getValue());
         }
         ac.finish();
-        
+
         // test Total.ISBottomNPercent() for BigDecimal data
-		ac = ag.newAccumulator( );
-		ac.start( );
-		for ( int i = 0; i < bigDecimalArray.length; i++ )
-		{
-			ac.onRow( new Object[]{
-					bigDecimalArray[i], new Double( 66 )
-			} );
-		}
-		ac.finish( );
-		ac.start( );
-		for ( int i = 0; i < bigDecimalArray.length; i++ )
-		{
-			ac.onRow( new Object[]{
-					bigDecimalArray[i], new Double( 66 )
-			} );
-			assertEquals( new Boolean( !doubleArray1TopBottom[i] ),
-					ac.getValue( ) );
-		}
-		ac.finish( );
+        ac = ag.newAccumulator( );
+        ac.start( );
+        for ( int i = 0; i < bigDecimalArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                    bigDecimalArray[i], new Double( 66 )
+            } );
+        }
+        ac.finish( );
+        ac.start( );
+        for ( int i = 0; i < bigDecimalArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                    bigDecimalArray[i], new Double( 66 )
+            } );
+            assertEquals( new Boolean( !doubleArray1TopBottom[i] ),
+                    ac.getValue( ) );
+        }
+        ac.finish( );
     }
-    
+	@Test
     public void testTotalRank() throws Exception
     {
         IAggrFunction ag = buildInAggrFactory.getAggregation("rank");
@@ -1711,14 +1900,14 @@ public class TotalTest extends TestCase
         assertEquals(2, ag.getParameterDefn().length);
         assertTrue(!ag.getParameterDefn()[0].isOptional());
         assertFalse(!ag.getParameterDefn()[1].isOptional());
-        
+
         ac.start();
         for(int i=0; i<doubleArray3.length; i++)
         {
             ac.onRow(new Object[]{doubleArray3[i], new Boolean(false)});
         }
         ac.finish();
-        
+
         ac.start();
         for(int i=0; i<doubleArray3.length; i++)
         {
@@ -1726,10 +1915,10 @@ public class TotalTest extends TestCase
             assertEquals(new Integer(doubleArray3RankDec[i]), ac.getValue());
         }
         ac.finish();
-        
+
         ag = buildInAggrFactory.getAggregation("rank");
         ac = ag.newAccumulator();
-        
+
         ac.start();
         for(int i=0; i<doubleArray3.length; i++)
         {
@@ -1740,31 +1929,31 @@ public class TotalTest extends TestCase
         for(int i=0; i<doubleArray3.length; i++)
         {
             ac.onRow(new Object[]{doubleArray3[i], new Integer(1)});
-        	assertEquals(new Integer(doubleArray3RankAsc[i]), ac.getValue());
+            assertEquals(new Integer(doubleArray3RankAsc[i]), ac.getValue());
         }
         ac.finish();
-        
-    	// test Total.rank() for BigDecimal data
-		ac = ag.newAccumulator( );
-		ac.start( );
-		for ( int i = 0; i < bigDecimalArray.length; i++ )
-		{
-			ac.onRow( new Object[]{
-					bigDecimalArray[i], new Boolean( true )
-			} );
-		}
-		ac.finish( );
-		ac.start( );
-		for ( int i = 0; i < bigDecimalArray.length; i++ )
-		{
-			ac.onRow( new Object[]{
-					bigDecimalArray[i], new Double( 0 )
-			} );
-			assertEquals( new Integer( bigDecimalRankAsc[i] ), ac.getValue( ) );
-		}
-		ac.finish( );
+
+        // test Total.rank() for BigDecimal data
+        ac = ag.newAccumulator( );
+        ac.start( );
+        for ( int i = 0; i < bigDecimalArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                    bigDecimalArray[i], new Boolean( true )
+            } );
+        }
+        ac.finish( );
+        ac.start( );
+        for ( int i = 0; i < bigDecimalArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                    bigDecimalArray[i], new Double( 0 )
+            } );
+            assertEquals( new Integer( bigDecimalRankAsc[i] ), ac.getValue( ) );
+        }
+        ac.finish( );
      }
-    
+	@Test
     public void testTotalPercentRank() throws Exception
     {
         IAggrFunction ag = buildInAggrFactory.getAggregation("percentrank");
@@ -1773,7 +1962,7 @@ public class TotalTest extends TestCase
         assertEquals(IAggrFunction.RUNNING_AGGR, ag.getType());
         assertEquals(1, ag.getParameterDefn().length);
         assertTrue(!ag.getParameterDefn()[0].isOptional());
-        
+
         ac.start();
         for(int i=0; i<doubleArray3.length; i++)
         {
@@ -1787,29 +1976,29 @@ public class TotalTest extends TestCase
             assertEquals(doubleArray3PercentRank[i], new Double((((Double)ac.getValue()).doubleValue( )*1000)).intValue( ));
         }
         ac.finish();
-        
+
         // test Total.PERCENTRANK() for BigDecimal data
-		ac = ag.newAccumulator( );
-		ac.start( );
-		for ( int i = 0; i < bigDecimalArray.length; i++ )
-		{
-			ac.onRow( new Object[]{
-				bigDecimalArray[i]
-			} );
-		}
-		ac.finish( );
-		ac.start( );
-		for ( int i = 0; i < bigDecimalArray.length; i++ )
-		{
-			ac.onRow( new Object[]{
-				bigDecimalArray[i]
-			} );
-			assertEquals( bigDecimalPercentRank[i],
-					new Double( ( ( (Double) ac.getValue( ) ).doubleValue( ) * 1000 ) ).intValue( ) );
-		}
-		ac.finish( );
+        ac = ag.newAccumulator( );
+        ac.start( );
+        for ( int i = 0; i < bigDecimalArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                bigDecimalArray[i]
+            } );
+        }
+        ac.finish( );
+        ac.start( );
+        for ( int i = 0; i < bigDecimalArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                bigDecimalArray[i]
+            } );
+            assertEquals( bigDecimalPercentRank[i],
+                    new Double( ( ( (Double) ac.getValue( ) ).doubleValue( ) * 1000 ) ).intValue( ) );
+        }
+        ac.finish( );
      }
-    
+	@Test
     public void testTotalPercentSum() throws Exception
     {
         IAggrFunction ag = buildInAggrFactory.getAggregation("percentsum");
@@ -1818,66 +2007,66 @@ public class TotalTest extends TestCase
         assertEquals(IAggrFunction.RUNNING_AGGR, ag.getType());
         assertEquals(1, ag.getParameterDefn().length);
         assertTrue(!ag.getParameterDefn()[0].isOptional());
-        
+
         ac.start();
         for(int i=0; i<doubleArray3.length; i++)
         {
             ac.onRow(new Object[]{doubleArray3[i]});
         }
         ac.finish();
-        
+
         ac.start();
         for(int i=0; i<doubleArray3.length; i++)
         {
             ac.onRow( new Object[]{
-				doubleArray3[i]
-			} );
-			assertEquals( doubleArray3PercentSum[i] == null ? new Integer( 0 )
-					: doubleArray3PercentSum[i],
-					new Integer( (int) ( new Double( ac.getValue( ).toString( ) ).doubleValue( ) * 1000 ) ) );
+                doubleArray3[i]
+            } );
+            assertEquals( doubleArray3PercentSum[i] == null ? new Integer( 0 )
+                    : doubleArray3PercentSum[i],
+                    new Integer( (int) ( new Double( ac.getValue( ).toString( ) ).doubleValue( ) * 1000 ) ) );
         }
         ac.finish();
         //DataException should be throwed if the parameter is non-numeric
         ac.start( );
-		for ( int i = 0; i < str2.length; i++ )
-		{
-			try
-			{
-				ac.onRow( new Object[]{
-					str2[i]
-				} );
-				fail( );
-			}
-			catch ( DataException e )
-			{
-			}
-		}
-		ac.finish( );
-		
-		// test Total.PERCENTSUM() for BigDecimal data
-		ac = ag.newAccumulator( );
-		ac.start( );
-		for ( int i = 0; i < bigDecimalArray.length; i++ )
-		{
-			ac.onRow( new Object[]{
-				bigDecimalArray[i]
-			} );
-		}
-		ac.finish( );
-		ac.start( );
-		for ( int i = 0; i < bigDecimalArray.length; i++ )
-		{
-			ac.onRow( new Object[]{
-				bigDecimalArray[i]
-			} );
-			Object ret = ac.getValue( );
-			assertTrue( ret instanceof BigDecimal );
-			assertEquals( bigDecimalPercentSum[i],
-					new Double( ( ( (Number) ret ).doubleValue( ) * 1000 ) ).intValue( ) );
-		}
-		ac.finish( );
+        for ( int i = 0; i < str2.length; i++ )
+        {
+            try
+            {
+                ac.onRow( new Object[]{
+                    str2[i]
+                } );
+                fail( );
+            }
+            catch ( DataException e )
+            {
+            }
+        }
+        ac.finish( );
+
+        // test Total.PERCENTSUM() for BigDecimal data
+        ac = ag.newAccumulator( );
+        ac.start( );
+        for ( int i = 0; i < bigDecimalArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                bigDecimalArray[i]
+            } );
+        }
+        ac.finish( );
+        ac.start( );
+        for ( int i = 0; i < bigDecimalArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                bigDecimalArray[i]
+            } );
+            Object ret = ac.getValue( );
+            assertTrue( ret instanceof Double );
+            assertEquals( bigDecimalPercentSum[i],
+                    new Double( ( ( (Number) ret ).doubleValue( ) * 1000 ) ).intValue( ) );
+        }
+        ac.finish( );
     }
-    
+	@Test
     public void testTotalPercentile() throws Exception
     {
         IAggrFunction ag = buildInAggrFactory.getAggregation("percentile");
@@ -1887,7 +2076,7 @@ public class TotalTest extends TestCase
         assertEquals(2, ag.getParameterDefn().length);
         assertTrue(!ag.getParameterDefn()[0].isOptional());
         assertFalse(ag.getParameterDefn( )[1].isOptional());
-        
+
         ac.start();
         for(int i=0; i<doubleArray3.length; i++)
         {
@@ -1896,7 +2085,7 @@ public class TotalTest extends TestCase
         ac.finish();
         Object value = ac.getValue( );
         assertEquals(value, new Double( 10.0 ));
-        
+
         ac.start();
         for(int i=0; i<doubleArray3.length; i++)
         {
@@ -1905,7 +2094,7 @@ public class TotalTest extends TestCase
         ac.finish();
         value = ac.getValue( );
         assertEquals(value, new Double( 10 ));
-        
+
         ac.start();
         for(int i=0; i<doubleArray3.length; i++)
         {
@@ -1914,7 +2103,7 @@ public class TotalTest extends TestCase
         ac.finish();
         value = ac.getValue( );
         assertEquals(value, new Double( 300 ));
-        
+
         ac.start();
         for(int i=0; i<doubleArray3.length; i++)
         {
@@ -1923,7 +2112,7 @@ public class TotalTest extends TestCase
         ac.finish();
         value = ac.getValue( );
         assertEquals(value, new Double( 70 ));
-        
+
         ac.start();
         for(int i=0; i<doubleArray3.length; i++)
         {
@@ -1932,9 +2121,9 @@ public class TotalTest extends TestCase
         ac.finish();
         value = ac.getValue( );
         assertEquals(value, new Double( 17.5 ));
-        
+
         try{
-        	 ac.start();
+             ac.start();
              for(int i=0; i<doubleArray3.length; i++)
              {
                  ac.onRow(new Object[]{doubleArray3[i], new Double(-1)});
@@ -1943,46 +2132,46 @@ public class TotalTest extends TestCase
              fail("should not arrive here");
         }catch ( DataException e )
         {}
-        
+
         //test the parameter boundary, which should be not less than 0 and greater than 4 
         ac.start();
         for(int i=0; i<doubleArray3.length; i++)
         {
-        	try
-			{
-        		ac.onRow(new Object[]{doubleArray3[i], new Double(-0.9)});
-        		fail();
-			}
-			catch ( DataException e )
-			{
-			}
-			
-			try
-			{
-        		ac.onRow(new Object[]{doubleArray3[i], new Double(4.1)});
-        		fail();
-			}
-			catch ( DataException e )
-			{
-			}
+            try
+            {
+                ac.onRow(new Object[]{doubleArray3[i], new Double(-0.9)});
+                fail();
+            }
+            catch ( DataException e )
+            {
+            }
+
+            try
+            {
+                ac.onRow(new Object[]{doubleArray3[i], new Double(4.1)});
+                fail();
+            }
+            catch ( DataException e )
+            {
+            }
         }
         ac.finish();
-        
+
         // test Total.Percentile() for BigDecimal data
-		ac = ag.newAccumulator( );
-		ac.start( );
-		for ( int i = 0; i < bigDecimalArray.length; i++ )
-		{
-			ac.onRow( new Object[]{
-					bigDecimalArray[i], new Double( 0.1 )
-			} );
-		}
-		ac.finish( );
-		Object ret = ac.getValue( );
-		assertTrue( ret instanceof BigDecimal );
-		assertTrue( new BigDecimal( "3.0" ).compareTo( (BigDecimal) ret ) == 0 );
+        ac = ag.newAccumulator( );
+        ac.start( );
+        for ( int i = 0; i < bigDecimalArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                    bigDecimalArray[i], new Double( 0.1 )
+            } );
+        }
+        ac.finish( );
+        Object ret = ac.getValue( );
+        assertTrue( ret instanceof Double );
+        assertEquals( 3.0D, ret );
      }
-    
+	@Test
     public void testTotalQuartile() throws Exception
     {
         IAggrFunction ag = buildInAggrFactory.getAggregation("quartile");
@@ -1991,8 +2180,8 @@ public class TotalTest extends TestCase
         assertEquals(IAggrFunction.SUMMARY_AGGR, ag.getType());
         assertEquals(2, ag.getParameterDefn().length);
         assertTrue(!ag.getParameterDefn()[0].isOptional());
-		assertFalse( ag.getParameterDefn( )[1].isOptional( ) );
-        
+        assertFalse( ag.getParameterDefn( )[1].isOptional( ) );
+
         ac.start();
         for(int i=0; i<doubleArray3.length; i++)
         {
@@ -2001,7 +2190,7 @@ public class TotalTest extends TestCase
         ac.finish();
         Object value = ac.getValue( );
         assertEquals(value, new Double( 10 ));
-        
+
         ac.start();
         for(int i=0; i<doubleArray3.length; i++)
         {
@@ -2010,7 +2199,7 @@ public class TotalTest extends TestCase
         ac.finish();
         value = ac.getValue( );
         assertEquals(value, new Double( 12.5 ));
-        
+
         ac.start();
         for(int i=0; i<doubleArray3.length; i++)
         {
@@ -2019,7 +2208,7 @@ public class TotalTest extends TestCase
         ac.finish();
         value = ac.getValue( );
         assertEquals(value, new Double( 30 ));
-        
+
         ac.start();
         for(int i=0; i<doubleArray3.length; i++)
         {
@@ -2028,7 +2217,7 @@ public class TotalTest extends TestCase
         ac.finish();
         value = ac.getValue( );
         assertEquals(value, new Double( 85 ));
-        
+
         ac.start();
         for(int i=0; i<doubleArray3.length; i++)
         {
@@ -2037,9 +2226,9 @@ public class TotalTest extends TestCase
         ac.finish();
         value = ac.getValue( );
         assertEquals(value, new Double( 300 ));
-        
+
         try{
-       	 ac.start();
+            ac.start();
             for(int i=0; i<doubleArray3.length; i++)
             {
                 ac.onRow(new Object[]{doubleArray3[i], new Double(5)});
@@ -2049,20 +2238,20 @@ public class TotalTest extends TestCase
        }catch ( DataException e )
        {}
        // test Total.Quartile() for BigDecimal data
-		ac = ag.newAccumulator( );
-		ac.start( );
-		for ( int i = 0; i < bigDecimalArray.length; i++ )
-		{
-			ac.onRow( new Object[]{
-					bigDecimalArray[i], new Double( 1 )
-			} );
-		}
-		ac.finish( );
-		Object ret = ac.getValue( );
-		assertTrue( ret instanceof BigDecimal );
-		assertTrue( new BigDecimal( "4.0" ).compareTo( (BigDecimal) ret ) == 0 );
+        ac = ag.newAccumulator( );
+        ac.start( );
+        for ( int i = 0; i < bigDecimalArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                    bigDecimalArray[i], new Double( 1 )
+            } );
+        }
+        ac.finish( );
+        Object ret = ac.getValue( );
+        assertTrue( ret instanceof Double );
+        assertEquals( 4.0D, ret );
      }
-    
+	@Test
     public void testTotalRunningCount() throws Exception
     {
         IAggrFunction ag = buildInAggrFactory .getAggregation("runningcount");
@@ -2070,7 +2259,7 @@ public class TotalTest extends TestCase
         assertEquals(IBuildInAggregation.TOTAL_RUNNINGCOUNT_FUNC, ag.getName());
         assertEquals(IAggrFunction.RUNNING_AGGR, ag.getType());
         assertEquals(1, ag.getParameterDefn().length);
-               
+
         ac.start();
         for(int i=0; i<doubleArray1.length; i++)
         {
@@ -2078,24 +2267,24 @@ public class TotalTest extends TestCase
             assertEquals( new Integer(i+1), ac.getValue());
         }
         ac.finish();
-        
-        ac.start( );
-		for ( int i = 0; i < anyObjectArray.length; i++ )
-		{
-			ac.onRow( new Object[]{
-				anyObjectArray[i]
-			} );
-		}
-		ac.finish( );
-		assertEquals( new Integer( 5 ), ac.getValue( ) );
 
-		ac.start( );
-		for ( int i = 0; i < anyObjectArray.length; i++ )
-		{
-			ac.onRow( null );
-		}
-		ac.finish( );
-		assertEquals( new Integer( 8 ), ac.getValue( ) );
-	}
-    
+        ac.start( );
+        for ( int i = 0; i < anyObjectArray.length; i++ )
+        {
+            ac.onRow( new Object[]{
+                anyObjectArray[i]
+            } );
+        }
+        ac.finish( );
+        assertEquals( new Integer( 5 ), ac.getValue( ) );
+
+        ac.start( );
+        for ( int i = 0; i < anyObjectArray.length; i++ )
+        {
+            ac.onRow( null );
+        }
+        ac.finish( );
+        assertEquals( new Integer( 8 ), ac.getValue( ) );
+    }
+
 }
